--- a/tools/curl-example-input.yml
+++ b/tools/curl-example-input.yml
@@ -4,7 +4,5 @@ accession: A00145
 dataformat: fasta
 # base range
 # leave blank if retriving whole genome
-start: 
-finish:
 # output file name
-outfile: example.fasta
+seqfile: "example.fasta"
