--- a/workflow/Retrieve_GC_workflow_input.yml
+++ b/workflow/Retrieve_GC_workflow_input.yml
@@ -1,8 +1,8 @@
-accession: A00145
-dataformat: fasta
-seqfile: int1.fasta
+accession: "A00145"
+dataformat: "fasta"
+seqfile: "int1.fasta"
 window_size: "5"
 step: "5"
-format: "wiggle"
+outformat: "wiggle"
 outputfile: "A00145"
 omittail: 
