--- a/tests/test_file_ex1_5_3.yml
+++ b/tests/test_file_ex1_5_3.yml
@@ -3,6 +3,6 @@ dataformat: fasta
 seqfile: int1.fasta
 window_size: "5"
 step: "3"
-format: "wiggle"
+outformat: "wiggle"
 outputfile: "ex1_5_3_test"
 omittail: 
