--- a/tests/test_file_ex1_5_3.yml
+++ b/tests/test_file_ex1_5_3.yml
@@ -1,5 +1,4 @@
-accession: A00145
-dataformat: fasta
+url: "https://www.ebi.ac.uk/ena/data/view/A00145&display=fasta"
 seqfile: int1.fasta
 window_size: "5"
 step: "3"
