--- a/tests/test_file_ex1_5_3_gz.yml
+++ b/tests/test_file_ex1_5_3_gz.yml
@@ -1,8 +1,7 @@
-accession: A00145
-dataformat: fasta
+url: "https://www.ebi.ac.uk/ena/data/view/A00145&display=fasta"
 seqfile: int1.fasta
 window_size: "5"
 step: "3"
-format: "gzip"
+outformat: "gzip"
 outputfile: "ex1_5_3_gz_test"
 omittail: 
