--- a/tools/md5.yml
+++ b/tools/md5.yml
@@ -1,4 +1,7 @@
+source /etc/bashrc
 genomefile:
   class: File
   path: ../../A00145.fasta
-tail: ""
+md5script:
+  class: File
+  path: ../scripts/md5.sh
